--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,10 @@ jobs:
           token: ${{ secrets.MY_TOKEN }}
           fetch-depth: 0
 
+      - run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
+
       - name: Read .nvmrc
         shell: /bin/bash -l {0}
         run: echo ::set-output name=NVMRC::$(cat .nvmrc)
